--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                         <span id="version"></span>
                     </div>
                     <div class="info">
-                        <span>A productivity app, to get on with your work <i>quicker</i>.</span>
+                        <span>A productivity app, to get on with your work <i>quicker</i></span>
                     </div>
                     <div class="buttons">
                         <a href="#" class="primary" id="os"></a>
