--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
                     <div class="buttons">
                         <a href="#" class="primary" id="os"></a>
                         <a href="#what-is-quickwords">Learn More</a>
+                        <a href="https://github.com/quickwords/quickwords" class="github-link"><svg aria-hidden="true" class="octicon octicon-mark-github" height="44" version="1.1" viewBox="0 0 16 16" width="44"><path fill-rule="evenodd" d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0 0 16 8c0-4.42-3.58-8-8-8z"></path></svg></a>
                     </div>
                 </div>
             </div>
@@ -30,6 +31,9 @@
                     <section id="what-is-quickwords">
                         <h1>What is Quickwords?</h1>
                         <p>Quickwords is an open-source alternative to Text Expander, hosted on <a href="https://github.com/quickwords/quickwords">GitHub</a>. It allows you to set up global key-bindings to quickly type text, that normally would take ages to type out by hand.</p>
+                        <video  style="margin-left:calc(50% - 200px);" width="400" height="100" autoplay loop>
+                            <source src="quick-demo.mov" type="video/mp4">
+                        </video>
                     </section>
                     <section>
                         <h1>Download</h1>
