--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+
         <title>Quickwords</title>
+
+        <link rel="icon" href="favicon.png">
+
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,700">
         <link rel="stylesheet" href="app.css">
     </head>
