--- a/src/index.html
+++ b/src/index.html
@@ -61,7 +61,7 @@
                                 <img src="assets/linux.svg" alt="">
                             </div>
                             <div class="mt-16">
-                                <a class="py-4 px-8 flex mb-4 bg-grey-dark text-grey-darkest border-3 border-transparent rounded-full" href="#" title="" onclick="event.preventDefault()">Download</a>
+                                <a class="py-4 px-8 flex mb-4 bg-grey-dark text-grey-darkest border-3 border-transparent rounded-full cursor-default" href="#" title="" onclick="event.preventDefault()">Download</a>
                             </div>
                             <div class="text-sm">
                                 <span>Coming soon</span>
@@ -73,7 +73,7 @@
                                 <img src="assets/windows.svg" alt="">
                             </div>
                             <div class="mt-16">
-                                <a class="py-4 px-8 flex mb-4 bg-grey-dark text-grey-darkest border-3 border-transparent rounded-full" href="#" title="" onclick="event.preventDefault()">Download</a>
+                                <a class="py-4 px-8 flex mb-4 bg-grey-dark text-grey-darkest border-3 border-transparent rounded-full cursor-default" href="#" title="" onclick="event.preventDefault()">Download</a>
                             </div>
                             <div class="text-sm">
                                 <span>Coming mid-2018</span>
