--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
                         <img src="assets/logo.svg" alt="Quickwords">
                     </div>
                     <div class="flex justify-center content-center mt-4 italic">
-                        <span id="version">v0.0.1 alpha</span>
+                        <span id="version">[ ]</span>
                     </div>
                     <div class="text-center mt-8 text-2xl sm:text-3xl">
                         <span>A productivity app, to get on with your work <i class="underline">quicker</i></span>
@@ -76,7 +76,7 @@
                                 <a class="py-4 px-8 flex mb-4 bg-grey-dark text-grey-darkest border-3 border-transparent rounded-full cursor-default" href="#" title="" onclick="event.preventDefault()">Download</a>
                             </div>
                             <div class="text-sm">
-                                <span>Coming mid-2018</span>
+                                <span>Fall 2018</span>
                             </div>
                         </div>
                     </div>
