--- a/src/index.html
+++ b/src/index.html
@@ -86,7 +86,7 @@
                     <div class="flex flex-col sm:flex-row">
                         <div class="flex flex-1 mb-4">
                             <div>
-                                <img class="w-16 h-16 rounded-full" src="https://www.gravatar.com/avatar/a703468a9fcafd4f309b0c8def5b5738" alt="">
+                                <img class="w-16 h-16 rounded-full" src="https://avatars3.githubusercontent.com/u/4501047?s=64&v=4" alt="">
                             </div>
                             <div class="ml-4 flex flex-col justify-center">
                                 <div class="text-lg">Dariusz Czajkowski</div>
@@ -95,7 +95,7 @@
                         </div>
                         <div class="flex flex-1">
                             <div>
-                                <img class="w-16 h-16 rounded-full" src="https://scontent-waw1-1.xx.fbcdn.net/v/t1.0-1/c194.0.553.553/s160x160/23231411_937870009711200_5095379675002277400_n.jpg?oh=26802efcab002e0f0358f00550377ba3&oe=5B0C0BF4" alt="">
+                                <img class="w-16 h-16 rounded-full" src="https://avatars3.githubusercontent.com/u/9699466?s=64&v=4" alt="">
                             </div>
                             <div class="ml-4 flex flex-col justify-center">
                                 <div class="text-lg">Grzegorz Tłuszcz</div>
