Added link to the documentation and Twitter

--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,7 @@
             <div class="container mx-auto px-8 sm:px-0">
                 <section class="mt-32" id="what-is-quickwords">
                     <h1 class="mb-6">What is Quickwords?</h1>
-                    <p>Quickwords is an open-source alternative to Text Expander, hosted on <a href="https://github.com/quickwords/quickwords">GitHub</a>. It allows you to set up global key-bindings to quickly type text, that normally would take ages to type out by hand.</p>
+                    <p>Quickwords is an open-source alternative to Text Expander, hosted on <a href="https://github.com/quickwords/quickwords">GitHub</a>. It allows you to set up global key-bindings to quickly type text, that normally would take ages to type out by hand. Full documentation can be found <a href="/docs">here</a>.</p>
 
                     <div class="h-5 sm:h-6 h-4 text-lg sm:text-2xl text-blue mt-8 flex w-full sm:w-80 mx-auto">
                         <div class="relative">
@@ -83,8 +83,8 @@
                 </section>
                 <section class="mt-32">
                     <h1 class="mb-6">Authors</h1>
-                    <div class="flex flex-col sm:flex-row">
-                        <div class="flex flex-1 mb-4">
+                    <div class="flex flex-col sm:flex-row mb-4">
+                        <div class="flex flex-1">
                             <div>
                                 <img class="w-16 h-16 rounded-full" src="https://avatars3.githubusercontent.com/u/4501047?s=64&v=4" alt="">
                             </div>
@@ -107,6 +107,9 @@
                 <section class="flex justify-center p-8 mt-16">
                     <a href="https://github.com/quickwords/quickwords" title="View on GitHub" class="text-black">
                         <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8 fill-current" viewBox="0 0 20 20"><path d="M10 0a10 10 0 0 0-3.16 19.49c.5.1.68-.22.68-.48l-.01-1.7c-2.78.6-3.37-1.34-3.37-1.34-.46-1.16-1.11-1.47-1.11-1.47-.9-.62.07-.6.07-.6 1 .07 1.53 1.03 1.53 1.03.9 1.52 2.34 1.08 2.91.83.1-.65.35-1.09.63-1.34-2.22-.25-4.55-1.11-4.55-4.94 0-1.1.39-1.99 1.03-2.69a3.6 3.6 0 0 1 .1-2.64s.84-.27 2.75 1.02a9.58 9.58 0 0 1 5 0c1.91-1.3 2.75-1.02 2.75-1.02.55 1.37.2 2.4.1 2.64.64.7 1.03 1.6 1.03 2.69 0 3.84-2.34 4.68-4.57 4.93.36.31.68.92.68 1.85l-.01 2.75c0 .26.18.58.69.48A10 10 0 0 0 10 0"></path></svg>
+                    </a>
+                    <a href="https://twitter.com/quickwordsapp" title="Twitter profile" class="ml-4" style="color: #00aced">
+                        <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8 fill-current" viewBox="0 0 512 512"><path d="M459.37 151.716c.325 4.548.325 9.097.325 13.645 0 138.72-105.583 298.558-298.558 298.558-59.452 0-114.68-17.219-161.137-47.106 8.447.974 16.568 1.299 25.34 1.299 49.055 0 94.213-16.568 130.274-44.832-46.132-.975-84.792-31.188-98.112-72.772 6.498.974 12.995 1.624 19.818 1.624 9.421 0 18.843-1.3 27.614-3.573-48.081-9.747-84.143-51.98-84.143-102.985v-1.299c13.969 7.797 30.214 12.67 47.431 13.319-28.264-18.843-46.781-51.005-46.781-87.391 0-19.492 5.197-37.36 14.294-52.954 51.655 63.675 129.3 105.258 216.365 109.807-1.624-7.797-2.599-15.918-2.599-24.04 0-57.828 46.782-104.934 104.934-104.934 30.213 0 57.502 12.67 76.67 33.137 23.715-4.548 46.456-13.32 66.599-25.34-7.798 24.366-24.366 44.833-46.132 57.827 21.117-2.273 41.584-8.122 60.426-16.243-14.292 20.791-32.161 39.308-52.628 54.253z"/></svg>
                     </a>
                 </section>
             </div>
