Added meta tags

--- a/src/index.html
+++ b/src/index.html
@@ -6,10 +6,31 @@
 
         <title>Quickwords</title>
 
+        <meta name="keywords" content="quickwords, productivity, application, cross-platform, macos, app, textexpander" />
+        <meta name="description" content="Quickwords is a productivity app, to get on with your work quicker">
+        <meta name="robots" content="INDEX,FOLLOW" />
+
+        <meta name="Author" content="Dariusz Czajkowski" />
+
         <link rel="icon" href="assets/favicon.png">
+
+        <meta name="theme-color" content="#24a1de">
 
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,700">
         <link rel="stylesheet" href="css/app.css">
+
+        <!-- Facebook tags -->
+        <meta property="og:title" content="Quickwords">
+        <meta property="og:site_name" content="Quickwords">
+        <meta property="og:description" content="Quickwords is a productivity app, to get on with your work quicker">
+        <meta property="og:image" content="https://quickwords.co/assets/icon.png">
+
+        <!-- Twitter tags -->
+        <meta name="twitter:card" content="summary">
+        <meta name="twitter:creator" content="@quickwordsapp">
+        <meta name="twitter:title" content="Quickwords">
+        <meta name="twitter:description" content="Quickwords is a productivity app, to get on with your work quicker">
+        <meta name="twitter:image" content="https://quickwords.co/assets/icon.png">
     </head>
     <body>
         <div class="font-sans">
