Added Google Analytics

--- a/src/index.html
+++ b/src/index.html
@@ -137,5 +137,15 @@
         </div>
 
         <script src="js/app.js"></script>
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-120212050-1"></script>
+        <script>
+            window.dataLayer = window.dataLayer || []
+            function gtag() {
+                dataLayer.push(arguments)
+            }
+            gtag('js', new Date())
+
+            gtag('config', 'UA-120212050-1')
+        </script>
     </body>
 </html>
