--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,7 @@
     </head>
     <body>
         <div class="font-sans">
-            <div class="flex items-center header border-t-5 border-blue bg-grey h-screen text-black">
+            <div class="flex items-center header border-t-5 border-blue bg-grey h-screen text-black bg-cover">
                 <div class="container mx-auto px-8 sm:px-0 max-w-sm">
                     <div class="flex max-w-xs mx-auto">
                         <img src="assets/logo.svg" alt="Quickwords">
