Added Patreon logo in the footer

--- a/src/index.html
+++ b/src/index.html
@@ -126,11 +126,17 @@
                     </div>
                 </section>
                 <section class="flex justify-center p-8 mt-16">
-                    <a href="https://github.com/quickwords/quickwords" title="View on GitHub" class="text-black">
+                    <a href="https://github.com/quickwords/quickwords" title="View on GitHub" class="text-black hover:text-github-black text-grey-darker">
                         <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8 fill-current" viewBox="0 0 20 20"><path d="M10 0a10 10 0 0 0-3.16 19.49c.5.1.68-.22.68-.48l-.01-1.7c-2.78.6-3.37-1.34-3.37-1.34-.46-1.16-1.11-1.47-1.11-1.47-.9-.62.07-.6.07-.6 1 .07 1.53 1.03 1.53 1.03.9 1.52 2.34 1.08 2.91.83.1-.65.35-1.09.63-1.34-2.22-.25-4.55-1.11-4.55-4.94 0-1.1.39-1.99 1.03-2.69a3.6 3.6 0 0 1 .1-2.64s.84-.27 2.75 1.02a9.58 9.58 0 0 1 5 0c1.91-1.3 2.75-1.02 2.75-1.02.55 1.37.2 2.4.1 2.64.64.7 1.03 1.6 1.03 2.69 0 3.84-2.34 4.68-4.57 4.93.36.31.68.92.68 1.85l-.01 2.75c0 .26.18.58.69.48A10 10 0 0 0 10 0"></path></svg>
                     </a>
-                    <a href="https://twitter.com/quickwordsapp" title="Twitter profile" class="ml-4" style="color: #00aced">
+                    <a href="https://twitter.com/quickwordsapp" title="Twitter profile" class="ml-4 hover:text-twitter-blue text-grey-darker">
                         <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8 fill-current" viewBox="0 0 512 512"><path d="M459.37 151.716c.325 4.548.325 9.097.325 13.645 0 138.72-105.583 298.558-298.558 298.558-59.452 0-114.68-17.219-161.137-47.106 8.447.974 16.568 1.299 25.34 1.299 49.055 0 94.213-16.568 130.274-44.832-46.132-.975-84.792-31.188-98.112-72.772 6.498.974 12.995 1.624 19.818 1.624 9.421 0 18.843-1.3 27.614-3.573-48.081-9.747-84.143-51.98-84.143-102.985v-1.299c13.969 7.797 30.214 12.67 47.431 13.319-28.264-18.843-46.781-51.005-46.781-87.391 0-19.492 5.197-37.36 14.294-52.954 51.655 63.675 129.3 105.258 216.365 109.807-1.624-7.797-2.599-15.918-2.599-24.04 0-57.828 46.782-104.934 104.934-104.934 30.213 0 57.502 12.67 76.67 33.137 23.715-4.548 46.456-13.32 66.599-25.34-7.798 24.366-24.366 44.833-46.132 57.827 21.117-2.273 41.584-8.122 60.426-16.243-14.292 20.791-32.161 39.308-52.628 54.253z"/></svg>
+                    </a>
+                    <a href="https://www.patreon.com/quickwords" title="Support us on Patreon" class="ml-4 text-grey-darker group">
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 180 180" class="h-8 w-8">
+                            <path class="fill-current text-grey-darker group-hover:text-patreon-orange" d="M108.8135992 26.06720125c-26.468266 0-48.00213212 21.53066613-48.00213212 47.99733213 0 26.38653268 21.53386613 47.85426547 48.00213213 47.85426547 26.38639937 0 47.8530655-21.4677328 47.8530655-47.85426547 0-26.466666-21.46666613-47.99733213-47.85306547-47.99733213"/>
+                            <path class="fill-current text-grey-darker group-hover:text-patreon-black" d="M23.333335 153.93333178V26.0666679h23.46666576v127.8666639z"/>
+                        </svg>
                     </a>
                 </section>
             </div>
