--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
         <meta name="theme-color" content="#24a1de">
 
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,700">
-        <link rel="stylesheet" href="css/app.css?v=1">
+        <link rel="stylesheet" href="css/app.css">
 
         <!-- Facebook tags -->
         <meta property="og:title" content="Quickwords">
