--- a/src/index.html
+++ b/src/index.html
@@ -85,7 +85,7 @@
                                 <a class="py-4 px-8 flex mb-4 bg-grey-dark text-grey-darkest border-3 border-transparent rounded-full cursor-default" href="#" title="" onclick="event.preventDefault()">Download</a>
                             </div>
                             <div class="text-sm">
-                                <span>Coming March 2019</span>
+                                <span>Help Needed</span>
                             </div>
                         </div>
                         <div class="flex-1 m-4 p-4 shadow-special rounded flex flex-col items-center">
@@ -97,7 +97,7 @@
                                 <a class="py-4 px-8 flex mb-4 bg-grey-dark text-grey-darkest border-3 border-transparent rounded-full cursor-default" href="#" title="" onclick="event.preventDefault()">Download</a>
                             </div>
                             <div class="text-sm">
-                                <span>Coming mid-2019</span>
+                                <span>Help Needed</span>
                             </div>
                         </div>
                     </div>
