Do not restrict logo size

--- a/src/index.html
+++ b/src/index.html
@@ -36,7 +36,7 @@
         <div class="font-sans">
             <div class="flex items-center header border-t-5 border-blue bg-grey h-screen text-black bg-cover">
                 <div class="container mx-auto px-8 sm:px-0 max-w-sm">
-                    <div class="flex max-w-xs mx-auto">
+                    <div class="flex mx-auto">
                         <img src="assets/logo.svg" alt="Quickwords">
                     </div>
                     <div class="flex justify-center content-center mt-4 italic">
